welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:13: error: not found: value deposeBiscuit
        deposeBiscuit()
        ^